Added DTOs, HabitHistory, JWT